[package]
name = "drop_size"
version = "0.1.0"
edition = "2021"

[dependencies]
frames = { git = "https://github.com/or-n/rust-action-utils.git" }
pixels = { git = "https://github.com/or-n/rust-action-utils.git" }
num = { git = "https://github.com/or-n/rust-minimalist-utils.git" }
color = { git = "https://github.com/or-n/rust-minimalist-utils.git" }
clap = { version = "4.5.9", features = ["derive"]}
clap_derive = { version = "4.5.8" }
itertools = "0.13.0"

